quorum/test/tests/TypeChecker/Pass/ImpAssignNumberIntegerWrapped.quorum
class main
    action main
        integer i = 5
        number n = i
    end
end