quorum/test/tests/TypeChecker/Fail/ImpAssignNumObjIntegerWrapped.quorum
class main
    action main
        integer i = 5
        Number num = i
    end
end